--- a/pl.coderslab.warsztat4/index.html
+++ b/pl.coderslab.warsztat4/index.html
@@ -11,7 +11,7 @@
         path: ["Python", "Warsztat"],
         fontAwesome: true
     });</script>
-    <script src="app.js"></script>
+    <script src="js/app.js" type="text/javascript"></script>
 </head>
 <body>
 <main id="app" class="js-tasks-list container mb-5">
