--- a/pl.coderslab.warsztat4/index.html
+++ b/pl.coderslab.warsztat4/index.html
@@ -18,24 +18,24 @@
 
     <div class="card shadow">
         <div class="card-body">
-            <h1 class="card-title">New task</h1>
+            <h1 class="card-title">Nowe zadanie</h1>
             <form class="js-task-adding-form">
                 <div class="form-group">
                     <input type="text"
                            class="form-control"
                            name="title"
-                           placeholder="Title"
+                           placeholder="Nazwa"
                            minlength="5"/>
                 </div>
                 <div class="form-group">
                     <input type="text"
                            class="form-control"
                            name="description"
-                           placeholder="Description"
+                           placeholder="Opis"
                            minlength="5"/>
                 </div>
                 <button class="btn btn-info">
-                    Add task
+                    Dodaj zadanie
                     <i class="fas fa-plus-circle ml-1"></i>
                 </button>
             </form>
